--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
 			<version>${hibernate-search.version}</version>
 		</dependency>
 
+		<!-- AOP -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+			<version>1.3.5.RELEASE</version>
+		</dependency>
+
 		<!-- WebJars -->
 		<dependency>
 			<groupId>org.webjars</groupId>
