--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=jsug
 
 # Spring Security
 security.basic.enabled=false
+
+# AOP
+spring.aop.auto=true
+spring.aop.proxy-target-class=false
